Updated some failing ITs